[gd_scene load_steps=8 format=3 uid="uid://bp51akjapuerf"]

[ext_resource type="Script" uid="uid://dvux8hj1euiax" path="res://GameData/Towers/Scripts/tower_mod_prototype.gd" id="1_uu2uq"]
[ext_resource type="Texture2D" uid="uid://c44rk0b010555" path="res://Assets/Effects/towerDefense_tile297.png" id="3_ptglf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uu2uq"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3lnkv"]
resource_local_to_scene = true
radius = 0.01

[sub_resource type="Animation" id="Animation_n4w1k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/Muzzle/MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kyc6b"]
resource_name = "fire"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Turret/Muzzle/MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_260rg"]
_data = {
&"RESET": SubResource("Animation_n4w1k"),
&"fire": SubResource("Animation_kyc6b")
}

[node name="TowerModPrototype" type="StaticBody2D"]
script = ExtResource("1_uu2uq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_uu2uq")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="Turret" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
offset = Vector2(12, 0)

[node name="Muzzle" type="Marker2D" parent="Turret"]
position = Vector2(43, 0)

[node name="MuzzleFlash" type="Sprite2D" parent="Turret/Muzzle"]
visible = false
position = Vector2(10, 7.10543e-15)
rotation = 1.5708
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_ptglf")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_3lnkv")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_260rg")
}

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
